notebook width flickering fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,12 +4,13 @@ html,
 body,
 :root {
   height: 100%;
+  /* width: 100%; */
 }
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  height: 100%;
+  /* height: 100%; */
 }
 
 @theme inline {
@@ -25,6 +26,7 @@ body,
     --foreground: #ededed;
   }
 }
+
 
 body {
   background: var(--background);
